# rgbd_camera_calibration

./: CMakeLists.txt  README.md  package.xml
launch/: calibration_test.launch
scripts/: calibrate.py  quaternions.py
src/: filter_bag.cpp
